# DBHandler

./: main.cpp
build-src-Desktop_Qt_5_12_9_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  dbhandler  dbhandler.cbp  qtcsettings.cmake
build-src-Desktop_Qt_5_12_9_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-8a8474ffc7d18a983c69.json  cmakeFiles-v1-98c5d4ce0821f992ed8b.json  codemodel-v2-d26df8f301f62d3752ab.json  index-2020-07-15T13-44-32-0528.json  target-dbhandler-Debug-791a2b998bbcf9f9fe18.json  target-dbhandler_autogen-Debug-97ef64b37627dd206163.json
build-src-Desktop_Qt_5_12_9_GCC_64bit-Debug/dbhandler_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_Qt_5_12_9_GCC_64bit-Debug/dbhandler_autogen/EWIEGA46WW/: moc_jsonconf.cpp
jsonconf/: CMakeLists.txt  jsonconf.cpp
src/: CMakeLists.txt  dbhandler.cpp  dbhandler.h
